[package]
name = "node-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opis = "5.0.2"
astro-format = "1.1.0"
# fides = "3.0.3"
fides = { path = "../fides-rs"}
hex = "0.4.3"
# neutrondb = "5.0.3"
neutrondb = { path = "../neutrondb-rs"}
rand = "0.8.5"